[package]
name = "claude-courier"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claude-courier"
path = "src/main.rs"

[lib]
name = "claude_courier"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
chrono = "0.4"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
notify = "6"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
libc = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
